# Sporangia

./: Cargo.toml  README.md  rmxp_db.rb  rxToJSON.rb
.autogit/logs/: log-8-4-2023-19-3-46.txt  log-8-4-2023-19-34-8.txt  log-8-4-2023-20-34-51.txt  log-8-4-2023-20-4-28.txt  log-8-4-2023-21-35-37.txt  log-8-4-2023-22-36-21.txt  log-8-4-2023-23-37-4.txt  log-8-4-2023-23-6-42.txt  log-9-4-2023-0-37-44.txt  log-9-4-2023-0-7-23.txt  log-9-4-2023-1-38-30.txt  log-9-4-2023-1-8-7.txt  log-9-4-2023-11-39-54.txt  log-9-4-2023-12-40-40.txt  log-9-4-2023-14-11-43.txt  log-9-4-2023-2-39-13.txt  log-9-4-2023-2-8-52.txt  log-9-4-2023-3-9-35.txt  log-9-4-2023-4-2-47.txt  log-9-4-2023-4-56-54.txt
src/: main.rs
src/backend/: mod.rs
src/controllers/: header.rs  image.rs  mod.rs  reader.rs  weather.rs
src/controllers/utils/: color.rs  mod.rs  object.rs  pure_object.rs  reader_helper.rs  table.rs  tone.rs
src/database/: mod.rs
src/frontend/: app.rs
src/test_files/: test.rxdata
src/ui/: mod.rs  theme.rs
src/ui/components/: menu.rs  mod.rs  palette.slint  splash.rs  splash.slint
src/ui/widgets/: app.slint  menu.slint
ui/: theme.rs
